# LLMTSCS

./: .gitignore  pyproject.toml  run_chatgpt.py  run_random.sh  run_trafficr1.py
models/: chatgpt.py  chatgpt_2.py
prompts/: prompt_traffic_r1.json
shs/: run_chatgpt.sh  run_fixed.sh  run_grpo_qwen253.sh  run_qwen253.sh  run_trafficr1.sh
utils/: cityflow_env.py  config.py  llm.py  oneline.py  trafficr1.py  utils.py
